# model-court

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  INSTALLATION_zh.md  LICENSE  MANIFEST.in  README.md  README_zh.md  api_docs.md  example.py  pyproject.toml  requirements.txt  setup.py  计划.txt
example/: .gitignore  README.md  env.example  example_full.py  requirements.txt
example/backend/: app.py
example/data/rag_documents/: basic_facts.txt  common_myths.txt  scientific_facts.txt
example/frontend/: index.html
example/rumor_txt_files/: health_rumors.txt
model_court/: __init__.py
model_court/code/: __init__.py  base.py  sqlite_code.py
model_court/core/: __init__.py  court.py  judge.py  jury.py  models.py  prosecutor.py
model_court/embeddings/: __init__.py  base.py  bge.py  minilm.py  openai_embedding.py
model_court/llm/: __init__.py  anthropic_provider.py  base.py  custom_provider.py  factory.py  google_provider.py  openai_provider.py
model_court/references/: __init__.py  base.py  google_search.py  rag_reference.py  text_storage.py
model_court/utils/: __init__.py  helpers.py
